<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tvTituloFormulario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Formulario Datos Persona"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:textStyle="bold"

        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/campo_nombre"
        android:layout_marginBottom="10dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blanco"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <DatePicker
        android:id="@+id/cvCalendario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/campo_fecha_nacimiento"
            android:paddingLeft="10dp"/>
    </DatePicker>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blanco"
            android:hint="@string/campo_telefono"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/campo_email"
        android:layout_marginBottom="10dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiEMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blanco"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/campo_descripcion_contacto"
        android:layout_marginBottom="10dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiDescipcionContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blanco"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btnConfirmar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_boton_confirmar" />
</LinearLayout>
</ScrollView>